Stop webhook target URLs from wrapping

--- a/public/main.css
+++ b/public/main.css
@@ -26,16 +26,6 @@ body {
   color: #fff;
 }
 
-.good {
-  color: #5cb85c;
-}
-
-.bad {
-  color: #d9534f;
-}
-
-p.betaFlag {
-  text-align: center;
-  font-weight: 500;
-  color: #888;
+.jumbotron p {
+  font-size: 16px;
 }
